--- a/jenkins-gke/tf-gke/values.yaml
+++ b/jenkins-gke/tf-gke/values.yaml
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-master:
-  tag: "2.248"
+controller:
+  tag: "2.263.1"
   containerEnv:
     - name: PROJECT_ID
       valueFrom:
@@ -43,18 +43,18 @@ master:
   servicePort: 80
   serviceType: LoadBalancer
   installPlugins:
-    - kubernetes:1.26.2
+    - kubernetes:1.27.6
     - workflow-job:2.39
     - workflow-aggregator:2.6
     - credentials-binding:1.23
-    - git:4.3.0
+    - git:4.4.5
     - blueocean:1.23.2
     - docker-custom-build-environment:1.7.3
     - credentials:2.3.11
     - docker-commons:1.17
     - docker-workflow:1.23
     - job-dsl:1.77
-    - configuration-as-code:1.41
+    - configuration-as-code:1.46
     - jdk-tool:1.4
   JCasC:
     enabled: true
